Fixed issue with Project section not aligning with rest of content as well.

--- a/style.css
+++ b/style.css
@@ -160,10 +160,13 @@ button:hover {
 /* Main content */
 main {
     display: grid;
-    grid-template-columns: 3fr 1fr;
-    grid-column: 2 / 3;
+    grid-template-columns: 1fr 1fr 0.8fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 20px;
+    padding: 40px 25px;
+    /* grid-column: 2 / 3;
     grid-row: 2 / 3;
-    padding: 8px;
+    padding: 8px; */
 
     background-color: rgb(228, 228, 228);
     text-align: left;
@@ -172,27 +175,34 @@ main {
 /* Projects Card Section */
 
 main .projects-container {
+    grid-area: 1/1/3/3;
     display: flex;
     flex-direction: column;
+    justify-content: start;
+    align-items: flex-start;
     padding: 16px;
 }
 
 
 main .projects-container .project-cards-container {
+    flex: 1;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-template-rows: repeat(2, 1fr);
-    gap: 15px;
+    grid-template-columns: 1fr 1fr;
+    padding-top: 0;
+    padding-bottom: 0;
+    /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
+    /* grid-template-rows: repeat(2, 1fr); */
+    gap: 20px; 
 }
 
 main .projects-container .project-cards-container .project-card {
     display: grid;
-    grid-template-rows: repeat(3, 1fr);
+    /* grid-template-rows: repeat(3, 1fr); */
     background-color: white;
-    padding: 16px;
+    padding: 20px;
     border-radius: 10px;
-    max-width: 250px;
-    max-height: 250px;
+    /* max-width: 250px; */
+    /* max-height: 250px; */
     border-left: solid 10px yellow;
 }
 
@@ -220,6 +230,7 @@ main .announcements {
     align-items: flex-start;
     padding: 24px;
     max-width: 75%;
+    grid-column: 3;
 }
 
 main .announcements .announcement-cards-wrapper  {
@@ -252,7 +263,7 @@ main .announcements .announcement-cards-wrapper .announcement-card:last-child {
 /* News Feed Section */
 
 main .news-feed {
-    grid-column: 2 / 3;
+    grid-area: 2/3;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
